// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectMeasure Container renders correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SelectMeasure
    handleSelect={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <label
          className="label"
>
          Measure
</label>,
        <div
          className="control"
>
          <div
                    className="select"
          >
                    <select
                              disabled={false}
                              onChange={[Function]}
                              value=""
                    >
                              <option
                                        disabled={true}
                                        value=""
                              >
                                        Select measure
                              </option>
                    </select>
          </div>
</div>,
      ],
      "className": "field",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Measure",
          "className": "label",
        },
        "ref": null,
        "rendered": "Measure",
        "type": "label",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="select"
>
            <select
                        disabled={false}
                        onChange={[Function]}
                        value=""
            >
                        <option
                                    disabled={true}
                                    value=""
                        >
                                    Select measure
                        </option>
            </select>
</div>,
          "className": "control",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <select
              disabled={false}
              onChange={[Function]}
              value=""
>
              <option
                            disabled={true}
                            value=""
              >
                            Select measure
              </option>
</select>,
            "className": "select",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <option
                  disabled={true}
                  value=""
>
                  Select measure
</option>,
              ],
              "disabled": false,
              "onChange": [Function],
              "value": "",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "-1",
                "nodeType": "host",
                "props": Object {
                  "children": "Select measure",
                  "disabled": true,
                  "value": "",
                },
                "ref": null,
                "rendered": "Select measure",
                "type": "option",
              },
            ],
            "type": "select",
          },
          "type": "div",
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <label
            className="label"
>
            Measure
</label>,
          <div
            className="control"
>
            <div
                        className="select"
            >
                        <select
                                    disabled={false}
                                    onChange={[Function]}
                                    value=""
                        >
                                    <option
                                                disabled={true}
                                                value=""
                                    >
                                                Select measure
                                    </option>
                        </select>
            </div>
</div>,
        ],
        "className": "field",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Measure",
            "className": "label",
          },
          "ref": null,
          "rendered": "Measure",
          "type": "label",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="select"
>
              <select
                            disabled={false}
                            onChange={[Function]}
                            value=""
              >
                            <option
                                          disabled={true}
                                          value=""
                            >
                                          Select measure
                            </option>
              </select>
</div>,
            "className": "control",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <select
                disabled={false}
                onChange={[Function]}
                value=""
>
                <option
                                disabled={true}
                                value=""
                >
                                Select measure
                </option>
</select>,
              "className": "select",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <option
                    disabled={true}
                    value=""
>
                    Select measure
</option>,
                ],
                "disabled": false,
                "onChange": [Function],
                "value": "",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": "-1",
                  "nodeType": "host",
                  "props": Object {
                    "children": "Select measure",
                    "disabled": true,
                    "value": "",
                  },
                  "ref": null,
                  "rendered": "Select measure",
                  "type": "option",
                },
              ],
              "type": "select",
            },
            "type": "div",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`SelectMeasure Container renders correctly 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SelectMeasure
    handleSelect={[Function]}
    indicatorId="123"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <label
          className="label"
>
          Measure
</label>,
        <div
          className="control"
>
          <div
                    className="select"
          >
                    <select
                              disabled={false}
                              onChange={[Function]}
                              value=""
                    >
                              <option
                                        disabled={true}
                                        value=""
                              >
                                        Select measure
                              </option>
                    </select>
          </div>
</div>,
      ],
      "className": "field",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Measure",
          "className": "label",
        },
        "ref": null,
        "rendered": "Measure",
        "type": "label",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="select"
>
            <select
                        disabled={false}
                        onChange={[Function]}
                        value=""
            >
                        <option
                                    disabled={true}
                                    value=""
                        >
                                    Select measure
                        </option>
            </select>
</div>,
          "className": "control",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <select
              disabled={false}
              onChange={[Function]}
              value=""
>
              <option
                            disabled={true}
                            value=""
              >
                            Select measure
              </option>
</select>,
            "className": "select",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <option
                  disabled={true}
                  value=""
>
                  Select measure
</option>,
              ],
              "disabled": false,
              "onChange": [Function],
              "value": "",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "-1",
                "nodeType": "host",
                "props": Object {
                  "children": "Select measure",
                  "disabled": true,
                  "value": "",
                },
                "ref": null,
                "rendered": "Select measure",
                "type": "option",
              },
            ],
            "type": "select",
          },
          "type": "div",
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <label
            className="label"
>
            Measure
</label>,
          <div
            className="control"
>
            <div
                        className="select"
            >
                        <select
                                    disabled={false}
                                    onChange={[Function]}
                                    value=""
                        >
                                    <option
                                                disabled={true}
                                                value=""
                                    >
                                                Select measure
                                    </option>
                        </select>
            </div>
</div>,
        ],
        "className": "field",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Measure",
            "className": "label",
          },
          "ref": null,
          "rendered": "Measure",
          "type": "label",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="select"
>
              <select
                            disabled={false}
                            onChange={[Function]}
                            value=""
              >
                            <option
                                          disabled={true}
                                          value=""
                            >
                                          Select measure
                            </option>
              </select>
</div>,
            "className": "control",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <select
                disabled={false}
                onChange={[Function]}
                value=""
>
                <option
                                disabled={true}
                                value=""
                >
                                Select measure
                </option>
</select>,
              "className": "select",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <option
                    disabled={true}
                    value=""
>
                    Select measure
</option>,
                ],
                "disabled": false,
                "onChange": [Function],
                "value": "",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": "-1",
                  "nodeType": "host",
                  "props": Object {
                    "children": "Select measure",
                    "disabled": true,
                    "value": "",
                  },
                  "ref": null,
                  "rendered": "Select measure",
                  "type": "option",
                },
              ],
              "type": "select",
            },
            "type": "div",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
